tests/baselines/reference/unusedMultipleParameter3InFunctionExpression.errors.txt
tests/cases/compiler/unusedMultipleParameter3InFunctionExpression.ts(2,54): error TS6133: 'person3' is declared but never used.
tests/cases/compiler/unusedMultipleParameter3InFunctionExpression.ts(3,9): error TS6133: 'unused' is declared but never used.


==== tests/cases/compiler/unusedMultipleParameter3InFunctionExpression.ts (2 errors) ====
    
    var func = function(person: string, person2: string, person3: string) {
                                                         ~~~~~~~
!!! error TS6133: 'person3' is declared but never used.
        var unused = 20;
            ~~~~~~
!!! error TS6133: 'unused' is declared but never used.
        person2 = "Dummy value";
    }